# mikado-judge

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  readme.txt
.claude/: settings.json
configs/: classes.yaml  dataset_colab.yaml  dataset_local.yaml  judge.yaml
docs/: annotation_guide.md  training_guide.md
notebooks/: evaluate.ipynb  train.ipynb  visualize_detections.ipynb
scripts/: cvat_to_yolo_obb.py  demo.py  evaluate_judge.py  extract_frames.py  keytest.py  lines_to_obb.py  prepare_dataset.py  run_inference.py  semi_auto_label.py  split_dataset.py  tile_dataset.py  visualize_obb.py
src/mikado/: __init__.py  align.py  detect.py  game.py  hand_mask.py  judge.py  track.py  utils.py  visualize.py
tests/: conftest.py  helpers.py  test_align.py  test_judge.py  test_lines_to_obb.py  test_track.py  test_utils.py
